Add main theme and setting up pokemon images

--- a/PokemonBattleSimulator/PokemonBattleSimulator.csproj
+++ b/PokemonBattleSimulator/PokemonBattleSimulator.csproj
@@ -9,15 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\UI\Sounds\Title.mp3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Resources\Data\" />
     <Folder Include="Resources\UI\Animations\" />
-    <Folder Include="Resources\UI\Sounds\" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Resources\UI\Images\AppIcon.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Content Include="Resources\UI\Sounds\Title.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
